add contact page with skeleton layout

--- a/contact.html
+++ b/contact.html
@@ -164,60 +164,23 @@
     </header>
 
     <main>
-        <div class="cards-container">
-            <div class="bg-cards">
-                <div class="card1">
-                    <div class="text-container">
-                        <h4 class="card-title">קמעונאות ומסחר</h4>
-                        <p class="card-text">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-                        <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
-                    </div>
-                </div>
-                <div class="card2">
-                    <div class="text-container">
-                        <h4 class="card-title">זיקוק</h4>
-                        <p class="card-text">פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...</p>
-                        <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="text-container">
-                        <h4 class="card-title">תעשיות ושירותים</h4>
-                        <p class="card-text">תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...</p>
-                        <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="sm-cards">
-                <div class="card4">
-                    <div class="card-container">
-                        <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
-                        <img class="card-img" src="../images/paz_250x110059890678.jpg">
-                        <a class="card-link" href="#">לפרטים נוספים<img src="../images/read_more_yellow.png"></a>
-                    </div>
-                </div>
-                <div class="card5">
-                    <div class="card-container">
-                        <h4 class="card-title">yellow click&pick</h4>
-                        <img id="img" class="card-img" src="../images/banner_atar.jpg">
-                        <a class="card-link" href="#">לפרטים נוספים<img src="../images/read_more_yellow.png"></a>
-                    </div>
-                </div>
-                <div class="card6">
-                    <div class="card-container">
-                        <h4 class="card-title">התחנות שלנו בדרך שלך</h4>
-                        <div class="flex-container">
-                            <div class="links-container">
-                                <a class="card-link" href="#">צפון<img src="../images/read_more_yellow.png"></a>
-                                <a class="card-link" href="#">מרכז<img src="../images/read_more_yellow.png"></a>
-                                <a class="card-link" href="#">דרום<img src="../images/read_more_yellow.png"></a>
-                            </div>
-                            <img class="card-img" src="../images/Untitled-3058756287.jpg">
-                        </div>
-                    </div>
+        <nav>
+            <ul class="side-menu">
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </nav>
+        <div class="navigation">
+            <a href="paz.html"></a>
+            <span></span>
+        </div>
+        <h3 class="contact-title"></h3>
+        <div class="flex-container">
+            <form action="">
 
-                </div>
-            </div>
+            </form>
+            <div class="contact-cards"></div>
         </div>
     </main>
 
