add side bar content and style

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -164,23 +163,25 @@
     </header>
 
     <main>
-        <nav>
-            <ul class="side-menu">
-                <li>
-                    <a href="#"></a>
-                </li>
-            </ul>
-        </nav>
-        <div class="navigation">
-            <a href="paz.html"></a>
-            <span></span>
-        </div>
-        <h3 class="contact-title"></h3>
-        <div class="flex-container">
-            <form action="">
+        <div class="contact-container">
+            <nav>
+                <ul class="side-menu">
+                    <li>
+                        <a href="#">צור קשר</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="navigation">
+                <a href="paz.html"></a>
+                <span></span>
+            </div>
+            <h3 class="contact-title"></h3>
+            <div class="flex-container">
+                <form action="">
 
-            </form>
-            <div class="contact-cards"></div>
+                </form>
+                <div class="contact-cards"></div>
+            </div>
         </div>
     </main>
 
