add contact title

--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
                     <a href="paz.html">עמוד הבית</a>
                     <span> > צור קשר</span>
                 </div>
-                <h3 class="contact-title"></h3>
+                <h3 class="contact-title">צור קשר</h3>
                 <div class="flex-container">
                     <form action="">
 
