--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contactStyle.css">
+
 </head>
 
 <body>
@@ -181,7 +183,10 @@
                     <form action="">
 
                     </form>
-                    <div class="contact-cards"></div>
+                    <div class="contact-cards">
+                        <div class="card1"></div>
+                        <div class="card2"></div>
+                    </div>
                 </div>
             </div>
         </div>
