--- a/contact.html
+++ b/contact.html
@@ -180,9 +180,11 @@
                 </div>
                 <h3 class="contact-title">צור קשר</h3>
                 <div class="flex-container">
-                    <form action="">
+                    <div class="form-wrapper">
+                        <form action="">
 
-                    </form>
+                        </form>
+                    </div>
                     <div class="contact-cards">
                         <div class="card1"></div>
                         <div class="card2"></div>
