add contact 1st card text

--- a/contact.html
+++ b/contact.html
@@ -186,8 +186,20 @@
                         </form>
                     </div>
                     <div class="contact-cards">
-                        <div class="card1"></div>
-                        <div class="card2"></div>
+                        <div class="card1">
+                            <h3 class="card-title">פרטי יצירת קשר</h3>
+                            <div class="card-text">
+                                <p>פז חברת נפט בע"מ</p>
+                                <p>יורו פארק, בניין הולנד</p>
+                                <p>קיבוץ יקום 60972</p>
+                                <p>טל. שירות לקוחות 1-800-774-774</p>
+                                <p>פקס.09-8641714</p>
+                            </div>
+                        </div>
+                        <div class="card2">
+                            <h3 class="card-title">עוד בפז</h3>
+                            <div class="card-text"></div>
+                        </div>
                     </div>
                 </div>
             </div>
