add contact 2nd card text

--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,12 @@
                         </div>
                         <div class="card2">
                             <h3 class="card-title">עוד בפז</h3>
-                            <div class="card-text"></div>
+                            <div class="card-text">
+                                <p>ליצירת קשר עם דוברות פז</p>
+                                <a href="#">לחצו כאן>></a>
+                                <p>ליצירת קשר עם דוברות פז</p>
+                                <a href="#">לחצו כאן>></a>
+                            </div>
                         </div>
                     </div>
                 </div>
