re-order form layout

--- a/contact.html
+++ b/contact.html
@@ -181,6 +181,11 @@
                 <h3 class="contact-title">צור קשר</h3>
                 <div class="flex-container">
                     <div class="form-wrapper">
+                        <h3 class="card-title">צור קשר</h3>
+                        <div class="form-text">
+                            <p>ליצירת קשר עם קשרי לקוחות אנא מלאו את הפרטים הבאים ואנו נשמח לעמוד לרשותכם :</p>
+                            <p>* השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
+                        </div>
                         <form action="">
 
                         </form>
