add form elements

--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,24 @@
                             <p>* השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
                         </div>
                         <form action="">
-
+                            <div>
+                                <label for="fname">שם פרטי:</label>
+                                <input type="text" id="fname" maxlength="30">
+                            </div>
+                            <div>
+                                <label for="lname">שם משפחה:</label>
+                                <input type="text" id="lname" maxlength="30">
+                            </div>
+                            <div>
+                                <label for="phone">טלפון:</label>
+                                <input type="" id="phone" maxlength="30">
+                            </div>
+                            <div>
+                                <label for="email">E-mail:</label>
+                                <input type="email">
+                            </div>
+                            <textarea rows="3" cols="20" id="info"></textarea>
+                            <input type="button" value="שלח">
                         </form>
                     </div>
                     <div class="contact-cards">
