--- a/contact.html
+++ b/contact.html
@@ -188,19 +188,19 @@
                         </div>
                         <form action="">
                             <div>
-                                <label for="fname">שם פרטי:</label>
+                                <label for="fname">* שם פרטי</label>
                                 <input type="text" id="fname" maxlength="30">
                             </div>
                             <div>
-                                <label for="lname">שם משפחה:</label>
+                                <label for="lname">* שם משפחה</label>
                                 <input type="text" id="lname" maxlength="30">
                             </div>
                             <div>
-                                <label for="phone">טלפון:</label>
+                                <label for="phone">* טלפון</label>
                                 <input type="" id="phone" maxlength="30">
                             </div>
                             <div>
-                                <label for="email">E-mail:</label>
+                                <label for="email">* E-mail</label>
                                 <input type="email">
                             </div>
                             <textarea rows="3" cols="20" id="info"></textarea>
