--- a/contact.html
+++ b/contact.html
@@ -203,7 +203,7 @@
                                 <label for="email">* E-mail</label>
                                 <input type="email">
                             </div>
-                            <textarea rows="3" cols="20" id="info"></textarea>
+                            <textarea rows="3" cols="20" id="info" placeholder="תוכן הפנייה"></textarea>
                             <input type="button" value="שלח">
                         </form>
                     </div>
