rename html file+ change homepage link to index.html

--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
             </nav>
             <div class="contact-left">
                 <div class="navigation">
-                    <a href="paz.html">עמוד הבית</a>
+                    <a href="index.html">עמוד הבית</a>
                     <span> > צור קשר</span>
                 </div>
                 <h3 class="contact-title">צור קשר</h3>
