change images path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img class="logo" src="../images/paz_logo.png" alt="">
+            <img class="logo" src="images/paz_logo.png" alt="">
             <div class="row">
                 <a class="lang" href="#">English</a>
                 <div class="search-box">
@@ -192,14 +192,14 @@
                 <div class="card4">
                     <div class="card-container">
                         <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
-                        <img class="card-img" src="../images/paz_250x110059890678.jpg">
+                        <img class="card-img" src="images/paz_250x110059890678.jpg">
                         <a class="card-link" href="#">לפרטים נוספים<i></i></a>
                     </div>
                 </div>
                 <div class="card5">
                     <div class="card-container">
                         <h4 class="card-title">yellow click&pick</h4>
-                        <img id="img" class="card-img" src="../images/banner_atar.jpg">
+                        <img id="img" class="card-img" src="images/banner_atar.jpg">
                         <a class="card-link" href="#">לפרטים נוספים<i></i></a>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                                 <a class="card-link" href="#">מרכז<i></i></a>
                                 <a class="card-link" href="#">דרום<i></i></a>
                             </div>
-                            <img class="card-img" src="../images/Untitled-3058756287.jpg">
+                            <img class="card-img" src="images/Untitled-3058756287.jpg">
                         </div>
                     </div>
 
