--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img class="logo" src="../images/paz_logo.png" alt="">
+            <img class="logo" src="images/paz_logo.png" alt="">
             <div class="row">
                 <a class="lang" href="#">English</a>
                 <div class="search-box">
